# OmniAudit

./: .dockerignore  .env.example  .gitattributes  .gitignore  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_FRONTEND.md  DEPLOY_NOW.md  Dockerfile  Dockerfile.frontend  EXAMPLE_DEPENDENCY_FINDINGS.json  EXAMPLE_SECURITY_FINDINGS.json  FRONTEND_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  LAUNCH_READINESS.md  PHASE_6_HARMONIZATION_REPORT.md  PHASE_8-9_IMPLEMENTATION_REPORT.md  PHASE_8-9_QUICK_REFERENCE.md  README.md  SECURITY.md  SETUP_AUTO_DEPLOY.md  STATUS.md  TASKS.md  VERCEL_DEPLOYMENT.md  alembic.ini  biome.json  deploy.sh  docker-compose.prod.yml  fly.toml  main.py  omniaudit.config.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  railway.json  render.yaml  (+5 more)
.claude/: settings.json
.claude/scripts/: notify.js  on-stop.js  post-edit.js  post-write.js  pre-bash.js  pre-write.js
.github/workflows/: README.md  ci-skip-python.yml  ci.yml  deploy-frontend.yml  release.yml
api/: analyze.ts  health.ts  index.py  main.py  skills.ts
config/: README.md
config/collectors/: git.yaml.example
dashboard-next/: .gitignore  eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
dashboard-next/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
dashboard-next/components/: header.tsx  sidebar.tsx
dashboard-next/e2e/: dashboard.spec.ts
dashboard-next/lib/: utils.ts
docker/: nginx.conf
docs/: API.md  DEPLOYMENT.md  QUICKSTART.md
docs/adr/: 001-plugin-architecture.md  002-data-storage-strategy.md  003-language-agnostic-design.md  004-anthropic-structured-outputs.md  README.md
docs/api/: README.md  openapi.yaml
docs/deployment/: production-guide.md
docs/guides/: README.md  ci-cd-guide.md  configuration.md  quickstart.md
e2e/: critical-flows.spec.ts  package.json  playwright.config.ts
examples/basic/: analyze_git_repo.py
frontend/: .env.example  .env.production  .eslintrc.json  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.tsx  index.css
grafana/dashboards/: omniaudit.json
kubernetes/: deployment.yaml
prometheus/: prometheus.yml
python-app/: Dockerfile
python-app/examples/: README.md  harmonizer_demo.py
python-app/migrations/: env.py
python-app/omniaudit/: __init__.py
python-app/scripts/: README.md  setup-dev.sh
python-app/tests/: __init__.py
scripts/: deploy.sh  init_db.py
src/: index.ts
src/analyzers/: ast-analyzer.ts  index.ts  performance-analyzer.ts  security-analyzer.ts
src/cli/: omniaudit.ts
src/core/: skills-engine.ts
src/db/: client.ts  migrate.ts  schema.sql  seed.ts
src/omniaudit/: cli.py
src/skills/: architecture-advisor.ts  index.ts  performance-optimizer.ts  react-best-practices.ts  security-auditor.ts  typescript-expert.ts
src/transformers/: base-transformer.ts  index.ts
src/types/: index.ts
src/workers/: index.ts
tests/analyzers/: __init__.py  test_accessibility_analyzer.py  test_api_analyzer.py  (+3 more)
vscode-extension/: package.json
(+259 files in other folders)
